<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_FixtureJigStateAbort" Id="{12e8b602-844a-4edc-85ef-9a997d0108ca}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_FixtureJigStateAbort :
(
	FIXTURE_JIG_ABORT_JIG_PUSHER	:= 0,	(*  *)
	FIXTURE_JIG_ABORT_DONE			:= 10	(*  *)
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>