<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_FixtureJigStateInit" Id="{4b2ef18f-f4e0-466d-b291-493e53f3b69a}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_FixtureJigStateInit :
(
	FIXTURE_JIG_INIT_JIG_PUSHER	:= 0,	(*  *)
	FIXTURE_JIG_INIT_DONE		:= 10	(*  *)
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>